Add Posts, Likes, Comments and update profile

--- a/website-skeleton/templates/profile/edit.html.twig
+++ b/website-skeleton/templates/profile/edit.html.twig
@@ -17,6 +17,9 @@
         {{ form_row(form.email) }}
         {{ form_row(form.dateofBirth) }}
         {{ form_row(form.gender) }}
+        {{ form_row(form.job) }}
+        {{ form_row(form.school) }}
+        {{ form_row(form.interests) }}
 
         <button type="submit" class="btn">Register</button>
     {{ form_end(form) }}
