--- a/website-skeleton/templates/profile/index.html.twig
+++ b/website-skeleton/templates/profile/index.html.twig
@@ -12,9 +12,47 @@
     <h1>Hello {{ user.firstname }} {{ user.lastname }}! ✅</h1>
     <li>Date Of Birth: {{ user.dateOfBirth ? user.dateOfBirth.format('Y-m-d') : 'Unknown' }}</li>
     <li>Gender: {{ user.gender }}</li>
+    {% if user.job %}
+        <li>Job: {{ user.job }}</li>
+    {% endif %}
+    {% if user.school %}
+        <li>School: {{ user.school }}</li>
+    {% endif %}
+    {% if user.interests %}
+        <li>Interests: {{ user.interests }}</li>
+    {% endif %}
+    {% set profilePicturePath = 'uploads/profile_pictures/' ~ user.profilePictureFilename %}
+    {% if asset(profilePicturePath) %}
+        <img src="{{ asset(profilePicturePath) }}" alt="Profile Picture" class="profile-picture">
+    {% else %}
+        <p>No profile picture found</p>
+    {% endif %}
+    
+    {% if user.coverPhotoFilename %}
+        <h2>Cover Photo</h2>
+        <img src="{{ asset('uploads/cover_photos/' ~ user.coverPhotoFilename) }}" alt="Cover Photo" class="cover-photo">
+    {% endif %}
     {% if app.user and app.user.id == user.id %}
         <a href="{{ path('profile_edit', {'id': user.id}) }}" class="btn btn-primary">Edit Profile</a>
+        <a href="{{ path('upload_profile_picture', {'id': user.id}) }}" class="btn btn-primary">Upload Profile Picture</a>
+        <a href="{{ path('upload_cover_photo', {'id': user.id}) }}" class="btn btn-primary">Upload Cover Photo</a>
     {% endif %}
+    <h1>Friends of {{ user.firstname }} {{ user.lastname }}</h1>
+    <ul>
+    {% for friend in friends %}
+        {% if friend.user.id != app.user.id %}
+            {% if not friend.isBlocked %}
+                <li>{{ friend.user.firstname }}
+                    {% if app.user and app.user.id == user.id %}
+                        <a href="{{ path('remove_friend', {'id': friend.id}) }}" class="btn btn-primary">Remove Friend</a></li>
+                        <li>
+                            <a href="{{ path('block_friend', {'id': friend.id}) }}" class="btn btn-primary">Block Friend</a>
+                        </li>
+                    {% endif %}
+            {% endif %}
+        {% endif %}
+    {% endfor %}
+    </ul>
     This friendly message is coming from:
     <ul>
         <li>Your controller at <code><a href="{{ 'C:/Users/dalec/OneDrive/Dokumenty/GitHub/SymfonyFacebookClone/website-skeleton/src/Controller/ProfileController.php'|file_link(0) }}">src/Controller/ProfileController.php</a></code></li>
